# e2e-data-engineering

./: .gitignore  Makefile  README.md  pyproject.toml
ingestion/: bigquery.py  duck.py  models.py  pipeline.py
ingestion/tests/: test_models.py
tests/ingestion/: test_models.py
