[tool.poetry]
name = "e2e-d-e"
version = "0.1.0"
description = ""
authors = ["Riki Phukon <rikiphukon17@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
duckdb = "^0.10.1"
google-cloud-bigquery = "^3.20.1"
google-auth = "^2.29.0"
google-cloud-bigquery-storage = "^2.24.0"
pyarrow = "^15.0.2"
pandas = "^2.2.1"
fire = "^0.6.0"
loguru = "^0.7.2"
pydantic = "^2.6.4"
pytest = "^8.1.1"
ruff = "^0.3.5"
python-dotenv = "^1.0.1"
db-dtypes = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
